Fixed spacing

--- a/src/app/components/area/area.scss
+++ b/src/app/components/area/area.scss
@@ -18,7 +18,7 @@
 }
 
 component-sensor {
-  margin-bottom: 10px;
-  display: inline-block;
+  display: block;
+  margin: 5px 0px;
   width: 100%;
 }
