--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,7 @@ html, body, material-app, .my-content {
 }
 
 .container-item {
+  display: block;
   margin: 20px auto;
   width: 100%;
 }
